Fixed horizontal scroll caused by AOS animation library

--- a/packages/demo-theme/src/style/base.scss
+++ b/packages/demo-theme/src/style/base.scss
@@ -1,8 +1,6 @@
 html{
   font-size: 12px;
 
-  overflow-x: hidden; // fixes the overflow created by the animation library
-
   @include tablet{
     font-size: 14px;
   }
@@ -15,6 +13,11 @@ html{
   background-color: var(--webiny-cms-theme-surface);
   min-height: calc(100vh - 205px);
   max-width: 100%;
+
+  // fixes the overflow created by the animation library (fix pending)
+  // https://github.com/michalsnik/aos/issues/416
+  overflow-x: hidden;
+  width: 100vw;
 
   @include desktop-and-tablet{
     min-height: calc(100vh - 230px);
